# lime

./: Cargo.toml  README.md  embed.html  index1.html  lime.toml  test.html
.github/workflows/: ci.yml  clippy.yml  release.yml
assets/: index-page.html  internal-error.html  not-found.html
demo/pages/: embed.html  gallery.html  index.html
src/: cli.rs  commands.rs  config.rs  handlers.rs  main.rs  server.rs
static/css/: style.css
